# SnTime

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in
test/: CMakeLists.txt  test.c
time/: CMakeLists.txt
time/include/sntime/: defines.h  sntime.h
time/src/: CMakeLists.txt
time/src/nix/: sntime.c
time/src/win32/: sntime.c
